@@ -10039,19 +10039,23 @@
  <country>
   <_name>Greece</_name>
    <location>
-    <_name>Andravida</_name>
-    <code>LGAD</code>
+    <_name>Agrinio</_name>
+    <code>LGAG</code>
    </location>
    <location>
-    <_name>Alexandroupolis</_name>
+    <_name>Alexandroupoli</_name>
     <code>LGAL</code>
+   </location>
+   <location>
+    <_name>Andravida</_name>
+    <code>LGAD</code>
    </location>
    <location>
     <_name>Araxos</_name>
     <code>LGRX</code>
    </location>
    <location>
-    <_name>Athinai</_name>
+    <_name>Athens</_name>
     <code>LGAV</code>
    </location>
    <location>
@@ -10059,11 +10063,15 @@
     <code>LGSA</code>
    </location>
    <location>
-    <_name>Elefsis</_name>
+    <_name>Chios</_name>
+    <code>LGHI</code>
+   </location>
+   <location>
+    <_name>Elefsina</_name>
     <code>LGEL</code>
    </location>
    <location>
-    <_name>Iraklion</_name>
+    <_name>Iraklio</_name>
     <code>LGIR</code>
    </location>
    <location>
@@ -10071,11 +10079,15 @@
     <code>LGKL</code>
    </location>
    <location>
+    <_name>Karpathos</_name>
+    <code>LGKP</code>
+   </location>
+   <location>
     <_name>Kavala</_name>
     <code>LGKV</code>
    </location>
    <location>
-    <_name>Kefallinia</_name>
+    <_name>Kefallonia</_name>
     <code>LGKF</code>
    </location>
    <location>
@@ -10095,12 +10107,12 @@
     <code>LGLM</code>
    </location>
    <location>
-    <_name>Mitilini</_name>
-    <code>LGMT</code>
+    <_name>Mikonos</_name>
+    <code>LGMK</code>
    </location>
    <location>
-    <_name>Mykonos</_name>
-    <code>LGMK</code>
+    <_name>Mitilini</_name>
+    <code>LGMT</code>
    </location>
    <location>
     <_name>Preveza</_name>
@@ -10121,6 +10133,14 @@
    <location>
     <_name>Skiathos</_name>
     <code>LGSK</code>
+   </location>
+   <location>
+    <_name>Skiros</_name>
+    <code>LGSY</code>
+   </location>
+   <location>
+    <_name>Syros</_name>
+    <code>LGSO</code>
    </location>
    <location>
     <_name>Thessaloniki</_name>
