@@ -1,3 +1,7 @@
+2004-09-20  Simos Xenitellis  <simos74@gmx.net>
+
+	* Locations.xml.in: Added more Locations for Greece. Closes #30821.
+
 2004-09-20  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Locations.xml.in: Added Estonian locations. Closes #152302. Patch
